--- a/examples/turbine_uniform_inflow/alm_simulation.yaml
+++ b/examples/turbine_uniform_inflow/alm_simulation.yaml
@@ -22,7 +22,7 @@ linear_solvers:
   max_iterations: 50
   kspace: 50
   output_level: 0
-  muelu_xml_file_name: ./xml/milestone.xml
+  muelu_xml_file_name: ./milestone.xml
   summarize_muelu_timer: no
 
 realms:
@@ -121,12 +121,12 @@ realms:
     search_method: boost_rtree
     search_target_part: Unspecified-2-HEX
 
-    n_turbines_glob: 1
+    n_turbines_glob: 2
     dry_run: false
     debug: true
     simStart: init
     t_start: 0.0
-    t_max: 20000
+    t_max: 1250
     dt_fast: 0.00625
     n_every_checkpoint: 1000
 
@@ -135,18 +135,30 @@ realms:
       num_force_pts_tower: 20
       nacelle_cd: 1.0
       nacelle_area: 8.0
-      air_density: 1.225
-      epsilon: [5.0, 5.0, 5.0]
-      turbine_base_pos: [0.0, 0.0, 0.0]
-      turbine_hub_pos: [0.0, 0.0, 90.0]
-      restart_filename: blah
+      air_density: 1.
+      epsilon: [12.0, 12.0, 12.0]
+      turbine_base_pos: [126.0, 0.0, -90.0]
+      turbine_hub_pos: [0.0, 0.0, 0.0]
+      restart_filename: restart_file
       fast_input_filename: nrel5mw.fst
       turb_id: 1
       turbine_name: machine_one
-
+    Turbine1:
+      num_force_pts_blade: 67
+      num_force_pts_tower: 12
+      nacelle_cd: 1.0
+      nacelle_area: 8.0
+      air_density: 1.
+      epsilon: [12.0, 12.0, 12.0]
+      turbine_base_pos: [252.0, 0.0, -90.0]
+      turbine_hub_pos: [0.0, 0.0, 0.0]
+      restart_filename: restart_file
+      fast_input_filename: nrel5mw2.fst
+      turb_id: 2
+      turbine_name: machine_two
   output:
     output_data_base_name: output/alm_uniform_inflow.exo
-    output_frequency: 10000
+    output_frequency: 2
     output_node_set: no
     output_variables:
     - velocity
@@ -164,7 +176,7 @@ Time_Integrators:
 - StandardTimeIntegrator:
     name: ti_1
     start_time: 0
-    termination_step_count: 160000
+    termination_step_count: 10000
     time_step: 0.125
     time_stepping_type: fixed
     time_step_count: 0
