Unit test of ngp::Mesh, demonstrating the most basic usage.
This commit also has several fixes for cuda compile errors, but
to see the unit test just read file UnitTestNgpMesh1.C.

--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -22,6 +22,7 @@ add_sources(GlobalUnitSourceList
    UnitTestMetricTensor.C
    UnitTestMovingAverage.C
    UnitTestNGPMasterElements.C
+   UnitTestNgpMesh1.C
    UnitTestPecletFunction.C
    UnitTestQuadElementPromotion.C
    UnitTestRealm.C
