--- a/examples/abl_neutral/abl_simulation.yaml
+++ b/examples/abl_neutral/abl_simulation.yaml
@@ -218,7 +218,7 @@ realms:
         enthalpy: yes
 
     - peclet_function_form:
-        velocity: classic
+        velocity: tanh
         enthalpy: tanh
         turbulent_ke: tanh
 
