--- a/examples/wind_farm/case_1_setup_abl_precursor.yaml
+++ b/examples/wind_farm/case_1_setup_abl_precursor.yaml
@@ -11,7 +11,7 @@ template_input: template_input_files/abl_precursor.yaml
 template_preprocess: template_input_files/nalu_preprocess.yaml
 
 # The name of the new input files
-new_input: precursor_simulation.yaml
+new_input: case_1_precursor_simulation.yaml
 new_preprocess: precursor_preprocess.yaml
 
 # Establish if the simulation is a restart or not (yes/no)
@@ -69,7 +69,7 @@ z0:                   0.15
 # Time-step [s]
 time_step: 0.5
 # Total number of time to run [s]
-total_run_time: 50
+total_run_time: 20
 
 ########
 #  Mesh
@@ -103,9 +103,9 @@ output_data_base_name: output/abl_5km_5km_1km_neutral.exo
 # This is to specify how to write restart files
 restart_output:
   # Name of the restart file this will overwrite
-  restart_data_base_name: ./rstTurbine2/owez_turbine.rst
+  restart_data_base_name: ./restart_data/precursor.rst
   # How often to write restart data (number of time-steps)
-  output_frequency: 100
+  restart_frequency: 10
 
 # These are the plane averaged statistics
 boundary_layer_statistics:
@@ -113,10 +113,3 @@ boundary_layer_statistics:
   stats_output_file: abl_statistics.nc
   # How often sample the statistics
   time_hist_output_frequency: 1
-
-# These are used to sample boundary data
-boundary_data:
-  # The name of the data file which data will be written
-  boundary_data_file: boundary_data.exo
-  # The boundaries to be saved
-  boundaries: [west, south]
