--- a/examples/wind_farm/case_2_setup_abl_precursor_boundary_data.yaml
+++ b/examples/wind_farm/case_2_setup_abl_precursor_boundary_data.yaml
@@ -7,12 +7,12 @@
 # These are the example input files and the files which will be generated.
 ##########################################################################
 # The old input files which will be modified
-template_input: setup_abl_precursor.yaml
-template_preprocess: template_input_files/nalu_preprocess.yaml
+template_input: template_input_files/abl_precursor_boundary_data.yaml
+template_preprocess: template_input_files/boundary_data.yaml
 
 # The name of the new input files
-new_input: setup_abl_precursor_boundary_data.yaml
-new_preprocess: precursor_preprocess.yaml
+new_input: case_2_abl_precursor_boundary_data.yaml
+new_preprocess: case_2_boundary_data_preprocess.yaml
 
 # Establish if the simulation is a restart or not (yes/no)
 restart: no
@@ -24,7 +24,9 @@ restart: no
 # Time-step [s]
 time_step: 0.5
 # Total number of time to run [s]
-total_run_time: 500
+total_run_time: 50
+# Start time (used when there is a restart)
+restart_time: 20.
 
 
 ########
@@ -37,7 +39,7 @@ mesh:
   # The name of the mesh file
   # If the mesh is generated the preprocessor will generate a mesh
   # If not the code will read in this mesh
-  mesh_file: mesh_abl.exo
+  mesh_file: restart_data/precursor.rst
   # The domain bounds [m]
   domain_bounds_x: [0.0, 500.0]
   domain_bounds_y: [0.0, 500.0]
@@ -55,17 +57,20 @@ mesh:
 output_frequency: 10000
 # Output file name. It will create the directory
 # Change .e
-output_data_base_name: output/abl_5km_5km_1km_neutral.exo
+output_data_base_name: case_2_output/precursor.exo
 
 # These are the plane averaged statistics
 boundary_layer_statistics:
   # The file to write output (netcdf)
-  stats_output_file: abl_statistics.nc
+  stats_output_file: abl_statistics_sampling.nc
   # How often sample the statistics
   time_hist_output_frequency: 1
 
 # These are used to sample boundary data
-boundary_data:
+boundary_data_sampling:
+  # The mesh used to read and create the planes
+  # This should be the original ABL mesh
+  input_mesh: mesh_abl.exo
   # The name of the data file which data will be written
   boundary_data_file: boundary_data.exo
   # The boundaries to be saved
