--- a/examples/wind_farm/setup_abl_precursor_boundary_data.yaml
+++ b/examples/wind_farm/setup_abl_precursor_boundary_data.yaml
@@ -80,7 +80,7 @@ realms:
 
     constant_specification:
       universal_gas_constant: 8314.4621
-      reference_pressure: 86011.67689655174
+      reference_pressure: 101325.0
 
     reference_quantities:
     - species_name: Air
@@ -92,11 +92,11 @@ realms:
         # Density here was computed such that P_ref = rho_ref*(R/mw)*300K
     - name: density
       type: constant
-      value: 1.
+      value: 1.178037722969475
 
     - name: viscosity
       type: constant
-      value: 1e-05
+      value: 1.2E-5
 
     - name: specific_heat
       type: constant
@@ -143,16 +143,16 @@ realms:
   - symmetry_boundary_condition: bc_upper
     target_name: upper
     symmetry_user_data:
-      normal_temperature_gradient: 0.003
+      normal_temperature_gradient: -0.003
 
   - wall_boundary_condition: bc_lower
     target_name: lower
     wall_user_data:
       velocity: [0, 0, 0]
       use_abl_wall_function: yes
-      heat_flux: 0.
+      heat_flux: 0.0
       reference_temperature: 300.0
-      roughness_height: 0.15
+      roughness_height: 0.1
       gravity_vector_component: 3
 
   solution_options:
@@ -203,13 +203,13 @@ realms:
         - rodi
 
     - user_constants:
-        reference_density: 1.
+        reference_density: 1.178037722969475
         reference_temperature: 300.0
         gravity: [0.0, 0.0, -9.81]
         thermal_expansion_coefficient: 3.33333333e-3
         east_vector: [1.0, 0.0, 0.0]
         north_vector: [0.0, 1.0, 0.0]
-        latitude: 41.3
+        latitude: 45.0
         earth_angular_velocity: 7.2921159e-5
 
     - limiter:
@@ -270,34 +270,76 @@ realms:
     momentum:
       type: computed
       relaxation_factor: 1.0
-      heights:
-      - 90.0
+      heights: [90.0]
       velocity_x:
-      - - 0.0
-        - 7.2504622962931995
-      - - 1000000000.0
-        - 7.2504622962931995
+      - [0.0, 7.250462296293199]
+      - [900000.0, 7.250462296293199]
+
       velocity_y:
-      - - 0.0
-        - 3.3809460939255955
-      - - 1000000000.0
-        - 3.3809460939255955
+      - [0.0, 3.380946093925596]
+      - [90000.0, 3.380946093925596]
+
       velocity_z:
-      - - 0.0
-        - 0.0
-      - - 1000000000.0
-        - 0.0
+      - [0.0, 0.0]
+      - [90000.0, 0.0]
+
   restart:
-    restart_data_base_name: ./restart_data/precursor.rst
-    restart_frequency: 10
-    restart_start: 0
+    restart_data_base_name: rst/prescursor.rst
+    output_frequency: 1000
+
+transfers:
+### Fluid to ....
+
+- name: south
+  type: geometric
+  realm_pair: [fluidRealm, ioRealm]
+  mesh_part_pair: [south, south]
+  objective: input_output
+  transfer_variables:
+  - [velocity, velocity_bc]
+  - [velocity, cont_velocity_bc]
+  - [temperature, temperature_bc]
+  - [turbulent_ke, turbulent_ke_bc]
+
+- name: north
+  type: geometric
+  realm_pair: [fluidRealm, ioRealm]
+  mesh_part_pair: [north, north]
+  objective: input_output
+  transfer_variables:
+  - [velocity, velocity_bc]
+  - [velocity, cont_velocity_bc]
+  - [temperature, temperature_bc]
+  - [turbulent_ke, turbulent_ke_bc]
+
+- name: east
+  type: geometric
+  realm_pair: [fluidRealm, ioRealm]
+  mesh_part_pair: [east, east]
+  objective: input_output
+  transfer_variables:
+  - [velocity, velocity_bc]
+  - [velocity, cont_velocity_bc]
+  - [temperature, temperature_bc]
+  - [turbulent_ke, turbulent_ke_bc]
+
+- name: west
+  type: geometric
+  realm_pair: [fluidRealm, ioRealm]
+  mesh_part_pair: [west, west]
+  objective: input_output
+  transfer_variables:
+  - [velocity, velocity_bc]
+  - [velocity, cont_velocity_bc]
+  - [temperature, temperature_bc]
+  - [turbulent_ke, turbulent_ke_bc]
 
 # This defines the time step size, count, etc.
 Time_Integrators:
 - StandardTimeIntegrator:
     name: ti_1
     start_time: 0.0
-    termination_step_count: 40
+    termination_step_count: 1000
     time_step: 0.5
     time_stepping_type: fixed
     time_step_count: 0
