--- a/examples/wind_farm/template_input_files/abl_precursor_boundary_data.yaml
+++ b/examples/wind_farm/template_input_files/abl_precursor_boundary_data.yaml
@@ -37,7 +37,7 @@ realms:
   - name: fluidRealm
     mesh: ./mesh/abl_5km_5km_1km_neutral.g
     use_edges: yes
-    automatic_decomposition_type: rcb
+    #~ automatic_decomposition_type: rcb
 
     # This defines the equations to be solved: momentum, pressure, static enthalpy,
     # and subgrid-scale turbulent kinetic energy.  The equation system will be iterated
@@ -285,8 +285,92 @@ realms:
 
     restart:
       restart_data_base_name: rst/prescursor.rst
-      restart_frequency: 1000
-      restart_start: 0
+      output_frequency: 1000
+
+  - name: ioRealm
+    mesh: io_transfer_3planes.exo
+    type: input_output
+    automatic_decomposition_type: rcb
+
+    field_registration:
+      specifications:
+
+        - field_name: velocity_bc
+          target_name: [south, west, north]
+          field_size: 3
+          field_type: node_rank
+
+        - field_name: cont_velocity_bc
+          target_name: [south, west, north]
+          field_size: 3
+          field_type: node_rank
+
+        - field_name: temperature_bc
+          target_name: [south, west, north]
+          field_size: 1
+          field_type: node_rank
+
+        - field_name: turbulent_ke_bc
+          target_name: [south, west, north]
+          field_size: 1
+          field_type: node_rank
+
+    output:
+      output_data_base_name: boundaryData/boundaryData.e
+      output_frequency: 1
+      output_node_set: no
+      output_variables:
+       - velocity_bc
+       - cont_velocity_bc
+       - temperature_bc
+       - turbulent_ke_bc
+
+transfers:
+### Fluid to ....
+
+   - name: south
+     type: geometric
+     realm_pair: [fluidRealm, ioRealm]
+     mesh_part_pair: [south, south]
+     objective: input_output
+     transfer_variables:
+       - [velocity, velocity_bc]
+       - [velocity, cont_velocity_bc]
+       - [temperature, temperature_bc]
+       - [turbulent_ke, turbulent_ke_bc]
+
+   - name: north
+     type: geometric
+     realm_pair: [fluidRealm, ioRealm]
+     mesh_part_pair: [north, north]
+     objective: input_output
+     transfer_variables:
+       - [velocity, velocity_bc]
+       - [velocity, cont_velocity_bc]
+       - [temperature, temperature_bc]
+       - [turbulent_ke, turbulent_ke_bc]
+
+   - name: east
+     type: geometric
+     realm_pair: [fluidRealm, ioRealm]
+     mesh_part_pair: [east, east]
+     objective: input_output
+     transfer_variables:
+       - [velocity, velocity_bc]
+       - [velocity, cont_velocity_bc]
+       - [temperature, temperature_bc]
+       - [turbulent_ke, turbulent_ke_bc]
+
+   - name: west
+     type: geometric
+     realm_pair: [fluidRealm, ioRealm]
+     mesh_part_pair: [west, west]
+     objective: input_output
+     transfer_variables:
+       - [velocity, velocity_bc]
+       - [velocity, cont_velocity_bc]
+       - [temperature, temperature_bc]
+       - [turbulent_ke, turbulent_ke_bc]
 
 # This defines the time step size, count, etc.
 Time_Integrators:
@@ -301,3 +385,4 @@ Time_Integrators:
 
       realms:
         - fluidRealm
+        - ioRealm
