--- a/examples/wind_farm/case_3_wind_farm.yaml
+++ b/examples/wind_farm/case_3_wind_farm.yaml
@@ -80,7 +80,7 @@ realms:
 
     constant_specification:
       universal_gas_constant: 8314.4621
-      reference_pressure: 101325.0
+      reference_pressure: 86011.67689655174
 
     reference_quantities:
     - species_name: Air
@@ -92,11 +92,11 @@ realms:
         # Density here was computed such that P_ref = rho_ref*(R/mw)*300K
     - name: density
       type: constant
-      value: 1.178037722969475
+      value: 1.
 
     - name: viscosity
       type: constant
-      value: 1.2E-5
+      value: 1e-05
 
     - name: specific_heat
       type: constant
@@ -176,9 +176,9 @@ realms:
     wall_user_data:
       velocity: [0, 0, 0]
       use_abl_wall_function: yes
-      heat_flux: 0.0
+      heat_flux: 0.
       reference_temperature: 300.0
-      roughness_height: 0.1
+      roughness_height: 0.15
       gravity_vector_component: 3
 
   solution_options:
@@ -229,13 +229,13 @@ realms:
         - rodi
 
     - user_constants:
-        reference_density: 1.178037722969475
+        reference_density: 1.
         reference_temperature: 300.0
         gravity: [0.0, 0.0, -9.81]
         thermal_expansion_coefficient: 3.33333333e-3
         east_vector: [1.0, 0.0, 0.0]
         north_vector: [0.0, 1.0, 0.0]
-        latitude: 45.0
+        latitude: 41.3
         earth_angular_velocity: 7.2921159e-5
 
     - limiter:
@@ -269,29 +269,41 @@ realms:
     search_method: boost_rtree
     search_target_part: fluid_part
 
-    n_turbines_glob: 1
+    n_turbines_glob: 2
     dry_run: false
     debug: true
     simStart: init
-    t_start: 0.0
-    t_max: 0.625
+    t_start: 20.
+    t_max: 50
     dt_fast: 0.00625
-    n_every_checkpoint: 100
+    n_every_checkpoint: 1000
 
     Turbine0:
       num_force_pts_blade: 50
       num_force_pts_tower: 20
       nacelle_cd: 1.0
       nacelle_area: 8.0
-      air_density: 1.225
-      epsilon: [5.0, 5.0, 5.0]
-      turbine_base_pos: [0.0, 0.0, 0.0]
-      turbine_hub_pos: [0.0, 0.0, 90.0]
-      restart_filename: blah
+      air_density: 1.
+      epsilon: [12.0, 12.0, 12.0]
+      turbine_base_pos: [150.0, 150.0, 0.0]
+      turbine_hub_pos: [0.0, 0.0, 0.0]
+      restart_filename: restart_file
       fast_input_filename: nrel5mw.fst
       turb_id: 1
       turbine_name: machine_one
-
+    Turbine1:
+      num_force_pts_blade: 67
+      num_force_pts_tower: 12
+      nacelle_cd: 1.0
+      nacelle_area: 8.0
+      air_density: 1.
+      epsilon: [12.0, 12.0, 12.0]
+      turbine_base_pos: [250.0, 250.0, 0.0]
+      turbine_hub_pos: [0.0, 0.0, 0.0]
+      restart_filename: restart_file
+      fast_input_filename: nrel5mw2.fst
+      turb_id: 2
+      turbine_name: machine_two
   output:
     output_data_base_name: case_3_output/precursor.exo
     output_frequency: 10000
