Add line of site sampling along a Spinner Lidar rosette pattern

--- a/include/user_functions/CMakeLists.txt
+++ b/include/user_functions/CMakeLists.txt
@@ -8,6 +8,7 @@ add_sources(GlobalHeaderList
    ConvectingTaylorVortexPressureAuxFunction.h
    ConvectingTaylorVortexVelocityAuxFunction.h
    FlowPastCylinderTempAuxFunction.h
+   GaussianWakeVelocityAuxFunction.h
    KovasznayPressureAuxFunction.h
    KovasznayVelocityAuxFunction.h
    LinearRampMeshDisplacementAuxFunction.h
