--- a/src/user_functions/CMakeLists.txt
+++ b/src/user_functions/CMakeLists.txt
@@ -8,6 +8,7 @@ add_sources(GlobalSourceList
    ConvectingTaylorVortexPressureAuxFunction.C
    ConvectingTaylorVortexVelocityAuxFunction.C
    FlowPastCylinderTempAuxFunction.C
+   GaussianWakeVelocityAuxFunction.C
    KovasznayPressureAuxFunction.C
    KovasznayVelocityAuxFunction.C
    LinearRampMeshDisplacementAuxFunction.C
