--- a/.gitmodules
+++ b/.gitmodules
@@ -4,4 +4,4 @@
         ignore = dirty
 [submodule "wind-utils"]
 	path = wind-utils
-	url = git@github.com:exawind/wind-utils.git
+	url = https://github.com/Exawind/wind-utils.git
