Changes to make the FFTW package optional.
M CMakeLists.txt
M src/CMakeLists.txt
M src/LowMachEquationSystem.C
M src/Simulation.C

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -182,6 +182,12 @@ add_sources(GlobalSourceList
    UnitTests.C
 )
 
+if(ENABLE_FFTW)
+   add_sources(GlobalSourceList
+      AssembleMomentumEdgeABLTopBC.C
+   )
+endif()
+
 if(ENABLE_OPENFAST)
    add_sources(GlobalSourceList
       ActuatorLineFAST.C
