Fix neutral ABL regression test and examples
Pull request #34 introduced a change in the specification of temperature
gradient for ABL top boundary. This commit propagate the necessary
changes to ablNeutralEdge regression test and the ABL examples.

Fix unused warning in EnthalpyEquationSystem.C

Fixes #52

--- a/examples/abl_neutral/template_input_files/ablNeutralEdge.yaml
+++ b/examples/abl_neutral/template_input_files/ablNeutralEdge.yaml
@@ -140,9 +140,9 @@ realms:
       periodic_user_data:
         search_tolerance: 0.0001
 
-    - symmetry_boundary_condition: bc_upper
+    - abltop_boundary_condition: bc_upper
       target_name: upper
-      symmetry_user_data:
+      abltop_user_data:
         normal_temperature_gradient: -0.003
 
     - wall_boundary_condition: bc_lower
