Added metric tensor functionality
This implements the metric tensor that will be used as part of the
UT-A hybrid models. EigenDecomposition was templated. Unit tests were
added for the metric tensor. All other unit tests pass.

--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -3,6 +3,7 @@ add_sources(GlobalUnitSourceList
    UnitTestABLWallFunction.C
    UnitTestBasicKokkos.C
    UnitTestCreateOnDevice.C
+   UnitTestEigenDecomposition.C
    UnitTestElemDataRequests.C
    UnitTestElemSuppAlg.C
    UnitTestElementDescription.C
@@ -20,6 +21,7 @@ add_sources(GlobalUnitSourceList
    UnitTestLocalGraphArrays.C
    UnitTestMasterElements.C
    UnitTestMetricTensor.C
+   UnitTestMijTensor.C
    UnitTestMovingAverage.C
    UnitTestNGPMasterElements.C
    UnitTestNgpMesh1.C
