removed excess functionality from MotionScaling to what is necessary right now. Added unit tests for different types of motion.

--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -22,6 +22,7 @@ add_sources(GlobalUnitSourceList
    UnitTestMasterElements.C
    UnitTestMetricTensor.C
    UnitTestMijTensor.C
+   UnitTestMotionTypes.C
    UnitTestMovingAverage.C
    UnitTestNGPMasterElements.C
    UnitTestNgpMesh1.C
