--- a/src/edge_kernels/CMakeLists.txt
+++ b/src/edge_kernels/CMakeLists.txt
@@ -1,7 +1,10 @@
 target_sources(nalu PRIVATE
   # Edge kernels
+  ${CMAKE_CURRENT_SOURCE_DIR}/AssembleEdgeKernelAlg.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/AssembleTAMSEdgeKernelAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/ContinuityEdgeSolverAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumEdgeSolverAlg.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/MomentumSSTTAMSDiffEdgeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarEdgeSolverAlg.C
   ${CMAKE_CURRENT_SOURCE_DIR}/WallDistEdgeSolverAlg.C
 
