--- a/src/node_kernels/CMakeLists.txt
+++ b/src/node_kernels/CMakeLists.txt
@@ -9,9 +9,13 @@ target_sources(nalu PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumMassBDFNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumActuatorNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/MomentumCoriolisNodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/MomentumSSTTAMSForcingNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarGclNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/ScalarMassBDFNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TurbKineticEnergyRodiNodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/SDRSSTTAMSNodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/TKESSTTAMSNodeKernel.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/TKERodiNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TKEKsgsNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TKESSTNodeKernel.C
   ${CMAKE_CURRENT_SOURCE_DIR}/TKESSTDESNodeKernel.C
