--- a/unit_tests/edge_kernels/CMakeLists.txt
+++ b/unit_tests/edge_kernels/CMakeLists.txt
@@ -11,4 +11,5 @@ target_sources(${utest_ex_name} PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestMomentumOpenEdge.C
   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestMomentumSymmetryEdge.C
   ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestScalarOpenEdge.C
+  ${CMAKE_CURRENT_SOURCE_DIR}/UnitTestMomentumSSTTAMSDiffEdge.C
   )
