Add a Dirichlet inflow kernel for momentum

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -28,6 +28,7 @@ add_sources(GlobalHeaderList
    AssembleMomentumElemSolverAlgorithm.h
    AssembleMomentumElemSymmetrySolverAlgorithm.h
    AssembleMomentumElemWallFunctionSolverAlgorithm.h
+   AssembleMomentumInflowSolverAlgorithm.h
    AssembleMomentumNonConformalSolverAlgorithm.h
    AssembleNodalGradAlgorithmDriver.h
    AssembleNodalGradBoundaryAlgorithm.h
