--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -64,6 +64,7 @@ add_sources(GlobalHeaderList
    BucketLoop.h
    BuildTemplates.h
    ComputeABLWallFrictionVelocityAlgorithm.h
+   ComputeDivMeshVelocity.h
    ComputeGeometryAlgorithmDriver.h
    ComputeGeometryBoundaryAlgorithm.h
    ComputeGeometryInteriorAlgorithm.h
