Convert TurbKineticEnergyKsgsDesignOrderSrcElemKernel to NGP.

--- a/unit_tests/kernels/CMakeLists.txt
+++ b/unit_tests/kernels/CMakeLists.txt
@@ -19,6 +19,7 @@ add_sources(GlobalUnitSourceList
    UnitTestScalarDiffElem.C
    UnitTestSteadyThermal3dContactSrcElem.C
    UnitTestTurbKineticEnergyKsgsSrcElemKernel.C
+   UnitTestTurbKineticEnergyKsgsDesignOrderSrcElemKernel.C
    UnitTestWallDistElem.C
 )
 
