Cleanup some TpetraLinearSystem types, and TpetraHelperObjects.
Made TpetraHelperObjectsBase, with derived classes for
TpetraHelperObjectsElem and TpetraHelperObjectsFaceElem.

--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -49,6 +49,7 @@ add_sources(GlobalUnitSourceList
 add_sources(GlobalUnitHeaderList
    UnitTestFieldUtils.h
    UnitTestHelperObjects.h
+   UnitTestTpetraHelperObjects.h
    UnitTestKokkosME.h
    UnitTestKokkosMEBC.h
    UnitTestKokkosMEGold.h
