NGP implementation of Edge algorithm (#232)
* WIP: Implement NGP ready edge algorithm

- Implement AssembleEdgeSolverAlgorithm capable of execution on GPUs
- Implement ContinuityEdgeSolverAlgorithm with the new interface

* Prepare kenrel unit tests for edge based NGP algorithms

* New TestLinearSystem for edge-based algorithms

* New HelperObjects for edge-based algorithms

* Add unit-test infrastructure for NGP edge algorithm

- Add ContinuityEdge algorithm as example

--- a/unit_tests/CMakeLists.txt
+++ b/unit_tests/CMakeLists.txt
@@ -68,6 +68,7 @@ endif()
 
 add_subdirectory(algorithms)
 add_subdirectory(kernels)
+add_subdirectory(edge_kernels)
 add_subdirectory(ho_kernels)
 add_subdirectory(ngp_kernels)
 add_subdirectory(mesh_motion)
