WIP: Preliminary design for NGP Nodal Kernels

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -216,6 +216,7 @@ endif()
 add_subdirectory(element_promotion)
 add_subdirectory(kernel)
 add_subdirectory(edge_kernels)
+add_subdirectory(node_kernels)
 add_subdirectory(master_element)
 add_subdirectory(mesh_motion)
 add_subdirectory(nso)
