NGP-ready nodal source assembly algorithm

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -40,6 +40,7 @@ add_sources(GlobalSourceList
    AssembleNodalGradUElemAlgorithm.C
    AssembleNodalGradUNonConformalAlgorithm.C
    AssembleNodeSolverAlgorithm.C
+   AssembleNGPNodeSolverAlgorithm.C
    AssemblePNGBoundarySolverAlgorithm.C
    AssemblePNGElemSolverAlgorithm.C
    AssemblePNGNonConformalSolverAlgorithm.C
