NGP ready version for Nodal source algorithms  (#243)
* NGPCopyHolder - boilerplate struct to hold device instances within Kokkos::View

* Replace NGPKernelInfo with NGPCopyHolder to reduce code duplication

* Preliminary design for NGP Nodal Kernels

* Update edge linear system to handle Momentum systems

* NGP-ready nodal source assembly algorithm

* Prepare unit tests for NGP nodal source algorithms

* Add unit test for NGP MomentumBodyForce

* Fix duplication for creating NGP views of Kernels

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -40,6 +40,7 @@ add_sources(GlobalSourceList
    AssembleNodalGradUElemAlgorithm.C
    AssembleNodalGradUNonConformalAlgorithm.C
    AssembleNodeSolverAlgorithm.C
+   AssembleNGPNodeSolverAlgorithm.C
    AssemblePNGBoundarySolverAlgorithm.C
    AssemblePNGElemSolverAlgorithm.C
    AssemblePNGNonConformalSolverAlgorithm.C
@@ -216,6 +217,7 @@ endif()
 add_subdirectory(element_promotion)
 add_subdirectory(kernel)
 add_subdirectory(edge_kernels)
+add_subdirectory(node_kernels)
 add_subdirectory(master_element)
 add_subdirectory(mesh_motion)
 add_subdirectory(nso)
