Convert MomentumBoussinesqSrcNodeSuppAlg to NGP.

--- a/unit_tests/node_kernels/CMakeLists.txt
+++ b/unit_tests/node_kernels/CMakeLists.txt
@@ -1,2 +1,4 @@
 add_sources(GlobalUnitSourceList
-  UnitTestMomentumBodyForceNode.C)
+  UnitTestMomentumBodyForceNode.C
+  UnitTestMomentumBoussinesqNode.C
+)
