Convert ScalarMassBDFNodeKernel to NGP (#247)
* Converting ScalarMassBDF2NodeKernel to NGP.

* Add UnitTestScalarMassBDF2NodeKernel.

* Changing BDF2 to BDF.

* Add shuffling to order of unit tests in gtest.

* Move setting of lhs and rhs into KokkosInterface.h.

--- a/unit_tests/node_kernels/CMakeLists.txt
+++ b/unit_tests/node_kernels/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_sources(GlobalUnitSourceList
   UnitTestMomentumBodyForceNode.C
   UnitTestMomentumBoussinesqNode.C
+  UnitTestScalarMassBDFNodeKernel.C
 )
