Convert Coriolis node source algorithm to NGP

--- a/src/node_kernels/CMakeLists.txt
+++ b/src/node_kernels/CMakeLists.txt
@@ -4,5 +4,6 @@ add_sources(GlobalSourceList
   MomentumBoussinesqNodeKernel.C
   MomentumMassBDFNodeKernel.C
   MomentumActuatorNodeKernel.C
+  MomentumCoriolisNodeKernel.C
   ScalarMassBDFNodeKernel.C
   )
