Convert WallDist node source algorithm to NGP

--- a/src/node_kernels/CMakeLists.txt
+++ b/src/node_kernels/CMakeLists.txt
@@ -6,4 +6,5 @@ add_sources(GlobalSourceList
   MomentumActuatorNodeKernel.C
   MomentumCoriolisNodeKernel.C
   ScalarMassBDFNodeKernel.C
+  WallDistNodeKernel.C
   )
