--- a/unit_tests/node_kernels/CMakeLists.txt
+++ b/unit_tests/node_kernels/CMakeLists.txt
@@ -6,4 +6,5 @@ add_sources(GlobalUnitSourceList
   UnitTestMomentumCoriolisNode.C
   UnitTestScalarMassBDFNodeKernel.C
   UnitTestMomentumActuatorNodeKernel.C
+  UnitTestWallDistNode.C
 )
