Nodal GPU version of MomentumActuator source kernel.

--- a/unit_tests/node_kernels/CMakeLists.txt
+++ b/unit_tests/node_kernels/CMakeLists.txt
@@ -2,4 +2,5 @@ add_sources(GlobalUnitSourceList
   UnitTestMomentumBodyForceNode.C
   UnitTestMomentumBoussinesqNode.C
   UnitTestScalarMassBDFNodeKernel.C
+  UnitTestMomentumActuatorNodeKernel.C
 )
