--- a/src/node_kernels/CMakeLists.txt
+++ b/src/node_kernels/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_sources(GlobalSourceList
   MomentumBodyForceNodeKernel.C
   MomentumBoussinesqNodeKernel.C
+  MomentumActuatorNodeKernel.C
   ScalarMassBDFNodeKernel.C
   )
