TpetraSegregatedSystem: adding the new TpetraSegregatedLinearSystem class (see issue #249)
Create the new class and adds the necessary hooks in LinearSystem calss and CMakeList.txt
Running the code on dgNonConformalThreeBlade goes through the simulation but more check probabaly would be good to make sure that the solution is accurate enough.
A comparison with the segregated system using Hypre would be good too!

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -168,6 +168,7 @@ add_sources(GlobalSourceList
    TimeIntegrator.C
    TpetraLinearSystem.C
    TpetraLinearSystemHelpers.C
+   TpetraSegregatedLinearSystem.C
    TurbKineticEnergyEquationSystem.C
    TurbKineticEnergyKsgsBuoyantElemSuppAlg.C
    TurbKineticEnergyKsgsNodeSourceSuppAlg.C
