Convert ContinuityMassBackwardEulerNodeKernel to NGP.

--- a/unit_tests/node_kernels/CMakeLists.txt
+++ b/unit_tests/node_kernels/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_sources(GlobalUnitSourceList
+  UnitTestContinuityMassBackwardEulerNodeKernel.C
   UnitTestMomentumBodyForceNode.C
   UnitTestMomentumBoussinesqNode.C
   UnitTestMomentumMassBDFNodeKernel.C
