New GPU kernel Turb Kinetic Energy Rodi
Needed to add another mesh constructor
class for turbulent kinetic energy fields.
I could not match the old version because
I could not match the mesh.

--- a/unit_tests/node_kernels/CMakeLists.txt
+++ b/unit_tests/node_kernels/CMakeLists.txt
@@ -3,4 +3,5 @@ add_sources(GlobalUnitSourceList
   UnitTestMomentumBoussinesqNode.C
   UnitTestScalarMassBDFNodeKernel.C
   UnitTestMomentumActuatorNodeKernel.C
+  UnitTestTurbKineticEnergyRodiNodeKernel.C
 )
