--- a/unit_tests/node_kernels/CMakeLists.txt
+++ b/unit_tests/node_kernels/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_sources(GlobalUnitSourceList
   UnitTestContinuityMassBDFNodeKernel.C
+  UnitTestEnthalpyABLForceNode.C
+  UnitTestMomentumABLForceNode.C
   UnitTestMomentumBodyForceNode.C
   UnitTestMomentumBoussinesqNode.C
   UnitTestMomentumMassBDFNodeKernel.C
