Convert AssembleScalarEdgeSolverAlgorithm to NGP

--- a/src/edge_kernels/CMakeLists.txt
+++ b/src/edge_kernels/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_sources(GlobalSourceList
   ContinuityEdgeSolverAlg.C
   MomentumEdgeSolverAlg.C
+  ScalarEdgeSolverAlg.C
   WallDistEdgeSolverAlg.C
   )
