--- a/unit_tests/edge_kernels/CMakeLists.txt
+++ b/unit_tests/edge_kernels/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_sources(GlobalUnitSourceList
   UnitTestContinuityAdvEdge.C
   UnitTestMomentumAdvDiffEdge.C
+  UnitTestScalarAdvDiffEdge.C
   UnitTestWallDistEdgeSolver.C
   )
