Convert ABLWallFunction to NGP
- Add necessary infrastructure to unit test the algorithm

--- a/src/edge_kernels/CMakeLists.txt
+++ b/src/edge_kernels/CMakeLists.txt
@@ -6,5 +6,6 @@ add_sources(GlobalSourceList
   WallDistEdgeSolverAlg.C
 
   # Face/edge BC kernels
+  MomentumABLWallFuncEdgeKernel.C
   MomentumSymmetryEdgeKernel.C
   )
