--- a/unit_tests/edge_kernels/CMakeLists.txt
+++ b/unit_tests/edge_kernels/CMakeLists.txt
@@ -6,5 +6,6 @@ add_sources(GlobalUnitSourceList
   UnitTestWallDistEdgeSolver.C
 
   # Face/elem edge BC kernels
+  UnitTestMomentumABLWallFuncEdge.C
   UnitTestMomentumSymmetryEdge.C
   )
