Convert ContinuityGclNodeSuppAlg to NGP.

--- a/src/node_kernels/CMakeLists.txt
+++ b/src/node_kernels/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_sources(GlobalSourceList
+  ContinuityGclNodeKernel.C
   ContinuityMassBDFNodeKernel.C
   EnthalpyABLForceNodeKernel.C
   MomentumABLForceNodeKernel.C
